@@ -1,3 +1,9 @@
+2012-05-10  Andrei Spataru  <aspataru@cern.ch>
+
+	* tag V01-00-14
+	* Added lock between I2O SM discards & stopping
+	* Improved input validation from SM I2O messages
+	
 2012-05-09  Andrei Spataru  <aspataru@cern.ch>
 
 	* tag V01-00-13
